rump_init(): need to call config_init() now.

PR kern/55004 (Hundreds of file system tests now fail on real hardware)